package logic.game;

/**
 * Identifies each game level. Each constant corresponds to a course/stage
 * in the ISCALE curriculum (levels 401 through 405).
 */
public enum LevelId {
    /** Level 1 – ISCALE 401. */
    ISCALE_401,
    /** Level 2 – ISCALE 402. */
    ISCALE_402,
    /** Level 3 – ISCALE 403. */
    ISCALE_403,
    /** Level 4 – ISCALE 404. */
    ISCALE_404,
    /** Level 5 – ISCALE 405. */
    ISCALE_405
}