@startuml UML_3_Logic
title Game Logic

package logic.components {
    enum Direction {
        UP
        DOWN
        LEFT
        RIGHT
        -- fields --
        - int dx
        - int dy
        -- methods --
        + int getDx()
        + int getDy()
    }
}

package logic.game {
    enum LevelId {
        ISCALE_401
        ISCALE_402
        ISCALE_403
        ISCALE_404
        ISCALE_405
    }

    class LevelConfig {
        - LevelId levelId
        - int defaultHealth
        - int defaultStamina
        - Reward reward
        + LevelConfig(LevelId, int, int, Reward)
        + LevelId getLevelId()
        + int getDefaultHealth()
        + int getDefaultStamina()
        + Reward getReward()
        + {static} LevelConfig fromLevel(LevelId)
    }

    class Player {
        - int stamina
        - int maxHealth
        - Direction lastDirection
        + Player(int, int, int, int)
        + int getMaxHealth()
        + Direction getLastDirection()
        + void setLastDirection(Direction)
        + int getStamina()
        + void setStamina(int)
        + boolean consumeStamina(int)
        + void gainStamina(int)
        + void takeDamage(int)
        + void heal(int)
        + void attack(Attackable)
        + void onAttackedBy(Player)
    }

    class GameBoard {
        - int width
        - int height
        - boolean[][] walls
        - List<BaseObject> moveableObstacles
        - List<Cable> cables
        - List<Human> humans
        - List<BaseItem> items
        - int playerStartX
        - int playerStartY
        - int doorX
        - int doorY
        - GameBoard(int, int)
        + {static} GameBoard fromResource(String)
        + int getWidth()
        + int getHeight()
        + boolean isWall(int, int)
        + boolean isInBounds(int, int)
        + int getPlayerStartX()
        + int getPlayerStartY()
        + int getDoorX()
        + int getDoorY()
        + List<BaseObject> getMoveableObstacles()
        + List<Cable> getCables()
        + List<Human> getHumans()
        + List<BaseItem> getItems()
        + Human findHumanAt(int, int)
        + BaseObject findMoveableObstacleAt(int, int)
        + Cable findCableAt(int, int)
        + BaseItem findItemAt(int, int)
        + boolean isBlockingCell(int, int)
        + boolean isDoor(int, int)
    }

    class GameSession {
        - List<Reward> collectedRewards
        - Player player
        - LevelConfig currentLevel
        + void startLevel(LevelId)
        + Player getPlayer()
        + LevelConfig getCurrentLevel()
        + Reward completeCurrentLevel()
        + List<Reward> getCollectedRewards()
        + boolean hasFinishedAllLevels()
    }

    class GameEngine {
        - GameSession session
        - LevelId levelId
        - int maxHealth
        - int maxStamina
        - GameBoard board
        - String statusMessage
        - boolean completed
        + GameEngine(GameSession, LevelId)
        + void move(Direction)
        + void restartLevel()
        + GameBoard getBoard()
        + Player getPlayer()
        + String getStatusMessage()
        + boolean isCompleted()
        + int getMaxHealth()
        + int getMaxStamina()
        + String getLevelLabel()
        + LevelId getNextLevelId()
        + String getMapResource()
    }
}

' Inheritance: Player extends Human
objects.Human <|-- Player : extends

' Composition: GameEngine owns GameSession and GameBoard
GameEngine "1" *-- "1" GameSession : session
GameEngine "1" *-- "1" GameBoard : board
GameEngine "1" --> "1" LevelId : levelId

' Composition: GameSession owns Player and LevelConfig
GameSession "1" *-- "0..1" Player : player
GameSession "1" --> "1" LevelConfig : currentLevel
GameSession "1" o-- "0..*" rewards.Reward : collectedRewards

' LevelConfig references
LevelConfig "1" --> "1" LevelId : levelId
LevelConfig "1" --> "1" rewards.Reward : reward

' GameBoard aggregates objects
GameBoard "1" o-- "0..*" objects.Human : humans
GameBoard "1" o-- "0..*" objects.BaseObject : moveableObstacles
GameBoard "1" o-- "0..*" objects.obstacles.Cable : cables
GameBoard "1" o-- "0..*" objects.items.BaseItem : items

' Player uses Direction
Player "1" --> "1" Direction : lastDirection

@enduml
